--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ include_directories( ${CURSES_INCLUDE_DIR} )
 
 add_executable( Test.Utils.StructureSensorBot Test.Utils.StructureSensorBot.cpp Utils.StructureSensorBot.cpp)
 add_executable( SceneNavigator.Utils.StructureSensorBot SceneNavigator.Utils.StructureSensorBot.cpp Utils.StructureSensorBot.cpp)
+add_executable( Mover.Utils.StructureSensorBot Mover.Utils.StructureSensorBot.cpp Utils.StructureSensorBot.cpp)
 
 target_link_libraries( Test.Utils.StructureSensorBot ${OpenCV_LIBS} )
 target_link_libraries( Test.Utils.StructureSensorBot ${Boost_SYSTEM_LIBRARY} )
@@ -21,4 +22,8 @@ target_link_libraries( SceneNavigator.Utils.StructureSensorBot ${OpenCV_LIBS} )
 target_link_libraries( SceneNavigator.Utils.StructureSensorBot ${Boost_SYSTEM_LIBRARY} )
 target_link_libraries( SceneNavigator.Utils.StructureSensorBot ${Boost_PROGRAM_OPTIONS_LIBRARY} )
 
+
+target_link_libraries( Mover.Utils.StructureSensorBot ${OpenCV_LIBS} )
+target_link_libraries( Mover.Utils.StructureSensorBot ${Boost_SYSTEM_LIBRARY} )
+target_link_libraries( Mover.Utils.StructureSensorBot ${Boost_PROGRAM_OPTIONS_LIBRARY} )
 
